# debianutils

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING  Makefile.am  Makefile.in  acinclude.m4  add-shell  add-shell.8  configure  configure.ac  installkernel  ischroot.c  remove-shell  remove-shell.8  run-parts.8  run-parts.c  savelog.8  tempfile.1  tempfile.c  update-shells  update-shells.8  which  which.1
debian/: NEWS  changelog  control  postinst  rules  watch
debian/patches/: dpkg-root  series
debian/tests/: control  smoke
debian/upstream/: metadata
po4a/: Makefile.am  Makefile.in  po4a.conf
po4a/de/: Makefile.am  Makefile.in  add-shell.8  installkernel.8  ischroot.1  remove-shell.8  savelog.8  tempfile.1  which.1
po4a/es/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  run-parts.8  tempfile.1
po4a/fr/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  run-parts.8  savelog.8  tempfile.1  which.1
po4a/it/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  tempfile.1  which.1
po4a/ja/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  run-parts.8  tempfile.1
po4a/pl/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  run-parts.8  tempfile.1
po4a/po/: de.po  debianutils.pot  es.po  fr.po  it.po  ja.po  pl.po  pt.po  sl.po
po4a/pt/: Makefile.am  add-shell.8  installkernel.8  ischroot.1  remove-shell.8  run-parts.8  savelog.8  tempfile.1  which.1
po4a/sl/: Makefile.am  Makefile.in  add-shell.8  ischroot.1  run-parts.8  tempfile.1
